# IAEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Src/IAESandbox/: CMakeLists.txt
Src/IAESandbox/Res/Graphics/iae/: 010_1.iae  011_1.iae  012_1.iae  013_1.iae  014_1.iae  015_1.iae  016_1.iae  017_1.iae  018_1.iae  019_1.iae  020_1.iae  021_1.iae  19emblem_dif.iae  19emblem_dodge.iae  19emblem_eff.iae  20emblem_dif.iae  20emblem_dodge.iae  20emblem_eff.iae
Src/IAESandbox/imp/cpp/: Game.cpp  Ground.cpp  Main.cpp  Map.cpp  Player.cpp
Src/IAESandbox/imp/hpp/: Game.hpp  Ground.hpp  Map.hpp  Player.hpp
Src/IAEngine/: CMakeLists.txt
Src/IAEngine/imp/cpp/: Audio.cpp  IAEngine.cpp  Input.cpp  Random.cpp  ResourceManager.cpp  Scene.cpp  Texture.cpp  Time.cpp
Src/IAEngine/imp/cpp/Components/: AtlasRenderer.cpp  ParticleEmitter.cpp  PhysicsBody.cpp  SoundEmitter.cpp  SpriteRenderer.cpp  TextureRenderer.cpp
Src/IAEngine/imp/cpp/Events/: Event.cpp
Src/IAEngine/imp/cpp/Nodes/: Node.cpp  Transform.cpp
Src/IAEngine/imp/cpp/Physics/: Physics.cpp
Src/IAEngine/inc/IAEngine/: Audio.hpp  Base.hpp  IAEngine.hpp  Input.hpp  Random.hpp  ResourceManager.hpp  Scene.hpp  Texture.hpp  Time.hpp
Src/IAEngine/inc/IAEngine/Components/: AtlasRenderer.hpp  Component.hpp  ParticleEmitter.hpp  PhysicsBody.hpp  SoundEmitter.hpp  SpriteRenderer.hpp  TextureRenderer.hpp
Src/IAEngine/inc/IAEngine/Events/: Event.hpp
Src/IAEngine/inc/IAEngine/Nodes/: Node.hpp  Transform.hpp
Src/IAEngine/inc/IAEngine/Physics/: Physics.hpp
cmake/: find_deps.cmake
include/iaengine/: color.hpp  engine.hpp  math.hpp  pch.hpp
include/iaengine/components/: canvas.hpp  event_receiver.hpp  input_receiver.hpp  physics.hpp  sound_emitter.hpp  sprite.hpp  texture.hpp  tilemap.hpp  transform.hpp
sandbox/: CMakeLists.txt
sandbox/src/cpp/: main.cpp
src/: CMakeLists.txt
src/cpp/: engine.cpp
tests/cpp/: main.cpp  sample_test.cpp
